[project]
name = "dsc"
version = "0.2.1a"
description = "A cryptocoin implementation called DsCoin"
requires-python = ">=3.10"

dependencies = [
    "ecdsa",
    "qasync",
    "PySide6",
    "pyqtdarktheme",
    "pydantic",
    "fastapi"
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"